[tool.poetry]
name = "aws-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "aws_app"}]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.144"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
